<resources>
    <string name="app_name">autosrt</string>
    <string name="textview_voice_language">Voice language</string>
    <string name="voice_language_hints">Voice language</string>
    <string name="textview_translation_language">Translation language</string>
    <string name="translation_language_hints">Translation language</string>
    <string name="browse">Browse</string>
    <string name="start">Start Transcribe</string>
    <string name="output_messages">Output messages</string>
    <string name="voice_language">Voice language</string>
    <string name="cancel">Cancel</string>
    <string name="file_path">Selected media files</string>
    <string name="language_src_language">Voice language</string>
    <string name="language_dst_language">Translation language</string>
    <string name="current_file_proceed">Current file proceed</string>
    <string name="grant_write_storage_permission">GRANT WRITE STORAGE PERMISSION</string>
    <string name="without_this_permission_this_app_won_t_work">(without this permission this app won\'t work)</string>
    <string name="grant_manage_app_all_files_access_permission">GRANT MANAGE APP ALL FILES ACCESS PERMISSION</string>
    <string name="needed_for_overwriting_existing_subtitle_files_otherwise_all_subtitle_files_will_always_be_saved_as_new_files_except_if_you_grant_persisted_tree_uri_permission">(needed for overwriting existing subtitle files when saving into \'Documents\' folder, otherwise all subtitle files will always be saved as new files, except persisted tree uri permission is granted)</string>
    <string name="grant_persisted_tree_uri_permission">GRANT PERSISTED TREE URI PERMISSION</string>
    <string name="needed_for_saving_subtitle_files_into_same_folder_as_your_videos_audios_files">(needed for saving subtitle files into same folder as your videos/audios files)</string>
    <string name="embed_subtitles_into_media_files">Embed subtitles into media files</string>
    <string name="create_translation">Create Translation</string>
    <string name="translation_language">Translation language</string>
    <string name="subtitle_format">Subtitle format</string>
    <string name="force_speech_recognition_process_to_media_files">Force speech recognition process to media files</string>
</resources>