<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="1dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/textview_text1"
            android:text="@string/voice_language"
            android:gravity="start|center"
            android:padding="0dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            tools:ignore="TextSizeCheck"
            />

        <Spinner
            android:id="@+id/spinner_src_languages"
            android:hint="@string/voice_language"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/voice_language"
            android:gravity="start"
            android:minHeight="30dp"
            android:padding="0dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/textview_text1"
            tools:ignore="ContentDescription,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            />
        <CheckBox
            android:id="@+id/checkbox_embed_src_subtitle"
            android:text="@string/embed_subtitles_into_media_files"
            android:checked="true"
            android:gravity="start"
            android:minHeight="30dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/textview_text1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck,DuplicateSpeakableTextCheck"
            />
        <CheckBox
            android:id="@+id/checkbox_create_translation"
            android:text="@string/create_translation"
            android:checked="true"
            android:gravity="start"
            android:minHeight="30dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/checkbox_embed_src_subtitle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck"
            />
        <TextView
            android:id="@+id/textview_text2"
            android:text="@string/translation_language"
            android:gravity="start|center"
            android:padding="0dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:visibility="visible"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_below="@+id/checkbox_create_translation"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="TextSizeCheck"
            />
        <Spinner
            android:id="@+id/spinner_dst_languages"
            android:hint="@string/translation_language_hints"
            android:contentDescription="@string/translation_language_hints"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="start"
            android:minHeight="30dp"
            android:padding="0dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_create_translation"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/textview_text2"
            tools:ignore="ContentDescription,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            />
        <CheckBox
            android:id="@+id/checkbox_embed_dst_subtitle"
            android:text="@string/embed_subtitles_into_media_files"
            android:checked="true"
            android:gravity="start"
            android:minHeight="30dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/textview_text2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck"
            />
        <TextView
            android:id="@+id/textview_text3"
            android:text="@string/subtitle_format"
            android:gravity="start|center"
            android:padding="0dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_below="@+id/checkbox_embed_dst_subtitle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="TextSizeCheck"
            />
        <Spinner
            android:id="@+id/spinner_subtitle_format"
            android:hint="@string/subtitle_format"
            android:contentDescription="@string/subtitle_format"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="start|center"
            android:minHeight="30dp"
            android:padding="0dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_embed_dst_subtitle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/textview_text3"
            tools:ignore="ContentDescription,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            />
        <CheckBox
            android:id="@+id/checkbox_force_recognize"
            android:text="@string/force_speech_recognition_process_to_media_files"
            android:checked="true"
            android:gravity="start"
            android:minHeight="28dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/textview_text3"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize"
            />
        <Button
            android:id="@+id/button_browse"
            android:text="@string/browse"
            android:minHeight="48dp"
            android:padding="5dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_force_recognize"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            />
        <TextView
            android:id="@+id/textview_filepath"
            android:hint="@string/file_path"
            android:padding="5dp"
            android:gravity="start"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:background="@android:drawable/editbox_background"
            android:layout_below="@+id/checkbox_force_recognize"
            android:layout_toEndOf="@+id/button_browse"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlHardcoded"
            />
        <Button
            android:id="@+id/button_grant_storage_permission"
            android:text="@string/grant_write_storage_permission"
            android:gravity="center"
            android:minHeight="28dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_browse"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize"
            />
        <TextView
            android:id="@+id/textview_grant_storage_permission_notes"
            android:text="@string/without_this_permission_this_app_won_t_work"
            android:padding="0dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="11sp"
            android:layout_below="@+id/button_grant_storage_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            />
        <Button
            android:id="@+id/button_grant_manage_app_all_files_access_permission"
            android:text="@string/grant_manage_app_all_files_access_permission"
            android:gravity="center"
            android:minHeight="28dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_grant_storage_permission_notes"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize"
            />
        <TextView
            android:id="@+id/textview_grant_manage_app_all_files_access_permission_notes"
            android:text="@string/needed_for_overwriting_existing_subtitle_files_otherwise_all_subtitle_files_will_always_be_saved_as_new_files_except_if_you_grant_persisted_tree_uri_permission"
            android:padding="0dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="11sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_grant_manage_app_all_files_access_permission"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            tools:ignore="VisualLintLongText"
            />
        <Button
            android:id="@+id/button_grant_persisted_tree_uri_permission"
            android:text="@string/grant_persisted_tree_uri_permission"
            android:gravity="center"
            android:minHeight="28dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_grant_manage_app_all_files_access_permission_notes"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize"
            />
        <TextView
            android:id="@+id/textview_grant_persisted_tree_uri_permission_notes"
            android:text="@string/needed_for_saving_subtitle_files_into_same_folder_as_your_videos_audios_files"
            android:padding="0dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="11sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_grant_persisted_tree_uri_permission"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            />
        <Button
            android:id="@+id/button_start"
            android:text="@string/start"
            android:gravity="center"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_grant_persisted_tree_uri_permission_notes"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="TextSizeCheck"
            />
        <TextView
            android:id="@+id/textview_output_messages_1"
            android:hint="@string/output_messages"
            android:background="@android:drawable/editbox_background"
            android:gravity="start"
            android:isScrollContainer="true"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:typeface="sans"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_below="@+id/button_start"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            tools:ignore="RtlHardcoded,SmallSp"
            />
    </RelativeLayout>
</ScrollView>
